hphp/hack/test/typecheck/aktuple/unify_error3.php.exp
File "unify_error3.php", line 13, characters 12-16:
Invalid argument (Typing[4110])
File "unify_error3.php", line 3, characters 19-21:
This is an int
File "unify_error3.php", line 10, characters 22-26:
It is incompatible with a string
