hphp/hack/test/typecheck/aktuple/unify_error3.php
<?hh //strict

function take_int(int $_): void {}

function test(bool $b): void {

  if ($b) {
    $a = array(4);
  } else {
    $a = array(3.14, 'aaa');
  }

  take_int($a[1]);
}
